# -caesar_cipher

./: AiClassera.ipynb  Gamma.ipynb  IEEE4.ipynb  README.md  detection_mask.ipynb  plant2022_part1.ipynb  pyproject.toml  skin_cancer_load_data.ipynb
1. Vehicle Insurance Classification/: Blood_Disease_Classification_(1).ipynb
2. Blood Disease Classification/: Blood_Disease_Classification_(2).ipynb  feature_extraction.ipynb
5.Twitter_Sentiment_Analysis/: Twitter_Sentiment_Analysis.ipynb
International Conference on Telecommunications 2024/: linear_regresstion.ipynb
caesar-cipher/: pyproject.toml
caesar-cipher/caesar_cipher/: caesar_cipher.py
caesar-cipher/tests/: test_caesar_cipher.py
